Move some modules from client to async.ui

--- a/hyperapp/async/ui/code_command_chooser.resources.en.yaml
+++ b/hyperapp/async/ui/code_command_chooser.resources.en.yaml
@@ -1,4 +1,4 @@
-module:client.code_command_chooser:CodeCommandChooser:
+module:async.ui.code_command_chooser:CodeCommandChooser:
   columns:
     path:
       text: Path
