--- a/hyperapp/async/ui/fs_local_service.yaml
+++ b/hyperapp/async/ui/fs_local_service.yaml
@@ -7,6 +7,6 @@ import:
     tree_to_list_adapter:
       - tree_to_list_adapter
   code:
-    - client.object_command
+    - async.ui.object_command
     - common.fs_service_impl
     - async.ui.module
