--- a/hyperapp/async/ui/params_editor_object.yaml
+++ b/hyperapp/async/ui/params_editor_object.yaml
@@ -11,6 +11,6 @@ import:
       - params_editor
   code:
     - async.ui.command
-    - client.record_object
-    - client.chooser
+    - async.ui.record_object
+    - async.ui.chooser
     - async.ui.module
