--- a/hyperapp/async/ui/tree_to_list_adapter.yaml
+++ b/hyperapp/async/ui/tree_to_list_adapter.yaml
@@ -8,8 +8,8 @@ import:
       - tree_to_list_adapter
       - tree_to_list_adapter_layout
   code:
-    - client.object_command
+    - async.ui.object_command
     - client.layout
-    - client.tree_object
-    - client.list_object
+    - async.ui.tree_object
+    - async.ui.list_object
     - async.ui.module
