--- a/hyperapp/client/list_view.yaml
+++ b/hyperapp/client/list_view.yaml
@@ -3,9 +3,9 @@ import:
     list_view:
       - list_layout
   code:
-    - client.list_object
+    - async.ui.list_object
     - client.layout
     - async.ui.qt.util
     - client.view
-    - client.items_view
+    - async.ui.items_view
     - async.ui.module
