--- a/hyperapp/async/ui/fs.yaml
+++ b/hyperapp/async/ui/fs.yaml
@@ -5,6 +5,6 @@ import:
   code:
   - async.code_registry
   - async.ui.command
-  - client.column
-  - client.tree_object
+  - async.ui.column
+  - async.ui.tree_object
   - async.ui.module
