--- a/hyperapp/async/ui/view_chooser.yaml
+++ b/hyperapp/async/ui/view_chooser.yaml
@@ -6,8 +6,8 @@ import:
       - view_chooser_type
       - view_chooser
   code:
-    - client.object_command
-    - client.chooser
-    - client.column
-    - client.simple_list_object
+    - async.ui.object_command
+    - async.ui.chooser
+    - async.ui.column
+    - async.ui.simple_list_object
     - async.ui.module
