--- a/hyperapp/client/tab_view.yaml
+++ b/hyperapp/client/tab_view.yaml
@@ -10,5 +10,5 @@ import:
     - async.ui.command
     - client.layout
     - client.layout_handle
-    - client.view_chooser
+    - async.ui.view_chooser
     - async.ui.module
