--- a/hyperapp/server/sample_list.yaml
+++ b/hyperapp/server/sample_list.yaml
@@ -10,6 +10,11 @@ import:
     record_ot:
       - field
       - record_ot
+    service:
+      - command
+      - list_service
+      - record_field
+      - record_service
     rpc_command:
       - rpc_element_command
     sample_list:
