Add parameters to service; use in record service

--- a/hyperapp/server/sample_list.yaml
+++ b/hyperapp/server/sample_list.yaml
@@ -11,6 +11,8 @@ import:
       - field
       - record_ot
     service:
+      - param_type
+      - parameter
       - command
       - list_service
       - record_field
