Rename module common.list_object -> list

--- a/hyperapp/async/ui/list_service.yaml
+++ b/hyperapp/async/ui/list_service.yaml
@@ -6,6 +6,6 @@ import:
       - command
       - list_service
   code:
-    - common.list_object
+    - common.list
     - async.ui.column
     - async.ui.simple_list_object
