Update type and code module tests: remove aliases

--- a/hyperapp/common/test/code_module_2.yaml
+++ b/hyperapp/common/test/code_module_2.yaml
@@ -1,8 +1,6 @@
 import:
   types:
     type_module_2:
-      - some_bool_list_opt
-      # - text_object_2
-      # - test_iface_b
+      - record_3
   code:
     - code_module_1
