--- a/hyperapp/server/sample_tree.yaml
+++ b/hyperapp/server/sample_tree.yaml
@@ -2,7 +2,7 @@ import:
   types:
     object_type:
       - object_command
-    string:
+    string_ot:
       - string_ot
     tree_ot:
       - column
