Add some code requires; update test_tree_view

--- a/hyperapp/client/layout_handle.yaml
+++ b/hyperapp/client/layout_handle.yaml
@@ -5,3 +5,5 @@ import:
   code:
     - async.ui.commander
     - async.ui.module
+    - client.view_registry
+    - client.object_layout_association
