--- a/hyperapp/client/tree_view.yaml
+++ b/hyperapp/client/tree_view.yaml
@@ -8,3 +8,6 @@ import:
     - client.layout
     - client.view
     - async.ui.module
+require_code_modules:
+  - common.resource_resolver
+  - async.ui.params_editor
