--- a/hyperapp/sync/rpc/rpc_endpoint.yaml
+++ b/hyperapp/sync/rpc/rpc_endpoint.yaml
@@ -4,3 +4,6 @@ import:
     - request
     - response
     - error_response
+require_code_modules:
+  - transport.identity
+  - sync.transport.transport
