Add some require/provide

--- a/hyperapp/async/ui/object_registry.yaml
+++ b/hyperapp/async/ui/object_registry.yaml
@@ -6,5 +6,8 @@ import:
   code:
     - async.code_registry
     - async.ui.record_object
-require_code_modules:
-  - async.async_web
+provide:
+  - object_registry
+  - object_animator
+require:
+  - async_web
