--- a/hyperapp/client/layout_handle.yaml
+++ b/hyperapp/client/layout_handle.yaml
@@ -7,3 +7,5 @@ import:
     - async.ui.module
     - client.view_registry
     - client.object_layout_association
+provide:
+  - layout_handle_from_object_type
