--- a/hyperapp/server/identity.yaml
+++ b/hyperapp/server/identity.yaml
@@ -1,3 +1,5 @@
-require_code_modules:
-  - common.file_bundle
-  - transport.rsa_identity
+require:
+  - file_bundle
+  - generate_rsa_identity
+provide:
+  - server_identity
