--- a/hyperapp/sync/transport/transport.yaml
+++ b/hyperapp/sync/transport/transport.yaml
@@ -1,2 +1,6 @@
-require_code_modules:
-  - sync.transport.route_table
+require:
+  - ref_collector
+  - route_registry
+  - route_table
+provide:
+  - transport
