--- a/hyperapp/sync/transport/test/echo.yaml
+++ b/hyperapp/sync/transport/test/echo.yaml
@@ -1,1 +1,7 @@
-# empty
+require:
+  - unbundler
+  - peer_registry
+  - generate_rsa_identity
+  - transport
+  - endpoint_registry
+  - subprocess_master_route
