Update test_sync_echo.py; Add some require/provide

--- a/hyperapp/sync/rpc/test/echo_service.yaml
+++ b/hyperapp/sync/rpc/test/echo_service.yaml
@@ -4,3 +4,9 @@ import:
       - endpoint
     echo:
       - echo_iface
+require:
+  - unbundler
+  - generate_rsa_identity
+  - rpc_endpoint
+  - endpoint_registry
+  - rpc_proxy
