Update test_async_tcp_transport.py; Add some require/provide

--- a/hyperapp/async/transport/route_table.yaml
+++ b/hyperapp/async/transport/route_table.yaml
@@ -1,3 +1,10 @@
 import:
   code:
     - transport.route_table
+require:
+  - aux_ref_collector_hooks
+  - aux_ref_unbundler_hooks
+  - peer_registry
+provide:
+  - async_route_registry
+  - async_route_table
