Update test_async_echo.py; Add some require/provide

--- a/hyperapp/async/rpc/rpc_endpoint.yaml
+++ b/hyperapp/async/rpc/rpc_endpoint.yaml
@@ -6,3 +6,9 @@ import:
     - error_response
   code:
     - async.code_registry
+require:
+  - peer_registry
+  - async_web
+  - async_transport
+provide:
+  - async_rpc_endpoint
