Add some require/provide

--- a/hyperapp/async/ui/application_state.yaml
+++ b/hyperapp/async/ui/application_state.yaml
@@ -1,1 +1,6 @@
-# empty
+require:
+  - async_web
+  - async_stop_event
+  - layout_manager
+  - default_state_builder
+  - application_state_storage
