--- a/hyperapp/client/tab_view.yaml
+++ b/hyperapp/client/tab_view.yaml
@@ -12,3 +12,7 @@ import:
     - client.layout_handle
     - async.ui.view_chooser
     - async.ui.module
+require:
+  - view_registry
+  - available_view_registry
+  - layout_watcher
