Rewrite object command: use view state

--- a/hyperapp/async/ui/object.yaml
+++ b/hyperapp/async/ui/object.yaml
@@ -2,4 +2,4 @@ import:
   code:
     - common.weak_key_dictionary_with_callback
     - common.resource_key
-    - async.ui.commander
+    - async.ui.object_command
