--- a/hyperapp/client/navigator/navigator.yaml
+++ b/hyperapp/client/navigator/navigator.yaml
@@ -14,6 +14,7 @@ import:
 require:
   - async_web
   - object_animator
+  - object_commands_factory
   - view_factory
   - view_registry
   - object_layout_registry
