Implement run_input_key_dialog

--- a/hyperapp/async/ui/command_list.yaml
+++ b/hyperapp/async/ui/command_list.yaml
@@ -20,6 +20,7 @@ import:
     - async.ui.object_command
     - client.layout_handle
     - async.ui.simple_list_object
+    - async.ui.qt.qt_keys
 require:
   - lcs
   - command_registry
