--- a/hyperapp/client/window.yaml
+++ b/hyperapp/client/window.yaml
@@ -6,7 +6,7 @@ import:
     - size
   code:
   - async.ui.qt.util
-  - client.view
+  - async.ui.qt.view
   - async.ui.command
   - client.layout
   - client.tab_view
