Command pane: load shortcut from lcs; disable shortcuts for menu bar

--- a/hyperapp/client/command_pane.yaml
+++ b/hyperapp/client/command_pane.yaml
@@ -1,7 +1,11 @@
 import:
   types:
+    command:
+      - command_shortcut_d
     command_pane:
     - command_pane
   code:
   - client.layout
   - async.ui.module
+require:
+  - lcs
