Rewrite view command; move command decorator to command module; remove commander

--- a/hyperapp/async/ui/qt/view.yaml
+++ b/hyperapp/async/ui/qt/view.yaml
@@ -1,6 +1,6 @@
 import:
   code:
-    - async.ui.commander
+    - async.ui.view_command
     - async.ui.object
     - async.ui.qt.util
     - async.ui.qt.qt_keys
