--- a/hyperapp/async/ui/code_command_chooser.yaml
+++ b/hyperapp/async/ui/code_command_chooser.yaml
@@ -6,7 +6,7 @@ import:
       - code_command_chooser_type
       - code_command_chooser
   code:
-    - async.ui.object_command
+    - async.ui.command
     - async.ui.chooser
     - async.ui.column
     - client.layout_handle
