--- a/hyperapp/async/ui/tree_to_list_adapter.yaml
+++ b/hyperapp/async/ui/tree_to_list_adapter.yaml
@@ -8,7 +8,7 @@ import:
       - tree_to_list_adapter
       - tree_to_list_adapter_layout
   code:
-    - async.ui.object_command
+    - async.ui.command
     - client.layout
     - async.ui.tree_object
     - async.ui.list_object
