--- a/hyperapp/async/ui/view_chooser.yaml
+++ b/hyperapp/async/ui/view_chooser.yaml
@@ -6,7 +6,7 @@ import:
       - view_chooser_type
       - view_chooser
   code:
-    - async.ui.object_command
+    - async.ui.command
     - async.ui.chooser
     - async.ui.column
     - async.ui.simple_list_object
