--- a/hyperapp/client/layout.yaml
+++ b/hyperapp/client/layout.yaml
@@ -3,7 +3,7 @@ import:
     layout:
       - command
   code:
-    - async.ui.commander
+    - async.ui.view_command
     - client.layout_command
     - client.layout_handle
     - async.ui.items_view
