--- a/hyperapp/client/layout_manager.yaml
+++ b/hyperapp/client/layout_manager.yaml
@@ -3,7 +3,7 @@ import:
     root_layout:
       - root_layout
   code:
-    - async.ui.object_command
+    - async.ui.command
     - client.layout_handle
     - client.layout
     - client.command_hub
