--- a/hyperapp/client/list_view_sample.yaml
+++ b/hyperapp/client/list_view_sample.yaml
@@ -10,7 +10,7 @@ import:
       - list_view_sample_object
       - list_sample_article
   code:
-    - async.ui.object_command
+    - async.ui.command
     - async.ui.object
     - async.ui.column
     - async.ui.list_object
