--- a/hyperapp/client/params_editor_sample.yaml
+++ b/hyperapp/client/params_editor_sample.yaml
@@ -3,7 +3,7 @@ import:
     params_editor_sample:
       - params_editor_sample
   code:
-    - async.ui.object_command
+    - async.ui.command
     - async.ui.column
     - async.ui.simple_list_object
     - async.ui.view_chooser
