--- a/hyperapp/client/tree_to_list_adapter_sample.yaml
+++ b/hyperapp/client/tree_to_list_adapter_sample.yaml
@@ -5,5 +5,5 @@ import:
     tree_to_list_adapter:
       - tree_to_list_adapter
   code:
-    - async.ui.object_command
+    - async.ui.command
     - async.ui.module
