--- a/hyperapp/client/tree_view_sample.yaml
+++ b/hyperapp/client/tree_view_sample.yaml
@@ -10,7 +10,7 @@ import:
       - tree_view_sample_object
       - tree_sample_article
   code:
-    - async.ui.object_command
+    - async.ui.command
     - async.ui.object
     - async.ui.column
     - async.ui.tree_object
