--- a/hyperapp/async/ui/command_list.yaml
+++ b/hyperapp/async/ui/command_list.yaml
@@ -26,6 +26,7 @@ import:
     - async.ui.module
 require:
   - lcs
+  - plcs
   - command_registry
   - object_commands_factory
   - global_command_list
