LCS dirs: use pieces instead of refs; add types for object dirs

--- a/hyperapp/async/ui/object.yaml
+++ b/hyperapp/async/ui/object.yaml
@@ -1,4 +1,7 @@
 import:
+  types:
+    object:
+      - object_d
   code:
     - common.weak_key_dictionary_with_callback
     - common.resource_key
