--- a/hyperapp/client/tree_view_sample.yaml
+++ b/hyperapp/client/tree_view_sample.yaml
@@ -1,12 +1,7 @@
 import:
   types:
-    object_type:
-      - object_command
-    record_ot:
-      - field
     tree_view_sample:
-      - tree_view_sample_object_type
-      - tree_view_sample_article_type
+      - tree_view_sample_d
       - tree_view_sample_object
       - tree_sample_article
   code:
