View selector: populate items

--- a/hyperapp/async/ui/view_selector.yaml
+++ b/hyperapp/async/ui/view_selector.yaml
@@ -3,6 +3,8 @@ import:
     view_selector:
       - open_view_selector_command
       - view_selector
+    view:
+      - available_view_d
     command:
       - object_commands_d
   code:
