--- a/hyperapp/async/ui/view_selector.yaml
+++ b/hyperapp/async/ui/view_selector.yaml
@@ -8,6 +8,7 @@ import:
     command:
       - object_commands_d
   code:
+    - async.ui.command
     - async.ui.object
     - async.ui.object_command
     - async.ui.column
