Selector and it's view

--- a/hyperapp/async/ui/record_field_list.yaml
+++ b/hyperapp/async/ui/record_field_list.yaml
@@ -8,6 +8,8 @@ import:
       - object_commands_d
     available_view_list:
       - available_view_list
+    selector:
+      - selector
   code:
     - async.ui.command
     - async.ui.record_object
