--- a/hyperapp/async/ui/record_field_list.yaml
+++ b/hyperapp/async/ui/record_field_list.yaml
@@ -16,3 +16,5 @@ import:
     - async.ui.object_command
     - async.ui.column
     - async.ui.simple_list_object
+require:
+  - make_selector_callback_ref
