--- a/hyperapp/client/tree_view_sample.yaml
+++ b/hyperapp/client/tree_view_sample.yaml
@@ -2,6 +2,7 @@ import:
   types:
     tree_view_sample:
       - tree_view_sample_d
+      - tree_view_sample_article_d
       - tree_view_sample_object
       - tree_sample_article
   code:
