Special directories for record fields

--- a/hyperapp/async/ui/record_field_list.yaml
+++ b/hyperapp/async/ui/record_field_list.yaml
@@ -1,5 +1,7 @@
 import:
   types:
+    record_object:
+      - record_field_d
     record_field_list:
       - open_record_field_list_command
       - record_field_list_d
