available_view_d -> view_d; Separate default and selected views

--- a/hyperapp/async/ui/tree_to_list_adapter.yaml
+++ b/hyperapp/async/ui/tree_to_list_adapter.yaml
@@ -1,7 +1,7 @@
 import:
   types:
     view:
-      - available_view_d
+      - view_d
     tree_to_list_adapter:
       - tree_to_list_adapter_d
       - tree_to_list_adapter
