--- a/hyperapp/async/ui/available_view_list.yaml
+++ b/hyperapp/async/ui/available_view_list.yaml
@@ -4,7 +4,7 @@ import:
       - available_view_list_d
       - available_view_list
     view:
-      - available_view_d
+      - view_d
   code:
     - async.ui.column
     - async.ui.simple_list_object
